인덱스 페이지 폴더 구성 #8

--- a/views/html/index.html
+++ b/views/html/index.html
@@ -1,10 +1,28 @@
+
 <!DOCTYPE html>
-<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Main</title>
+    <title>NooleZip</title>
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-<h1>Noodle-Zip Project</h1>
+
+
+    <div class="logo">
+        <img src="img/logo.png">
+        <!-- <div class="circle"></div> -->
+    </div>
+
+
+    <div class="start">
+        <p>처음이라면? <a href="#">회원가입</a></p>
+        <button>시작하기</button>
+    </div>
+
+    <div class="line">
+        <div class="line1"></div>
+        <div class="line2"></div>
+    </div>
+
 </body>
 </html>
