--- a/views/html/index.html
+++ b/views/html/index.html
@@ -6,17 +6,13 @@
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-
-
-    <div class="logo">
-        <img src="img/logo.png">
-        <!-- <div class="circle"></div> -->
-    </div>
-
-
+ 
+    <div class="circle"></div>
+    <img src="img/logo.png">
+        
     <div class="start">
-        <p>처음이라면? <a href="#">회원가입</a></p>
-        <button>시작하기</button>
+        <p style="font-size: 20px;">처음이라면? <a href="join.html">회원가입</a></p>
+        <button onclick="location.href='login.html'">시작하기</button>
     </div>
 
     <div class="line">
