--- a/views/html/memo.html
+++ b/views/html/memo.html
@@ -6,17 +6,17 @@
   <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
   <title>App & Me</title>
 	<link rel="shortcut icon" href="img/favicon.ico">
-<link rel="stylesheet" href="css/join.css">
+<link rel="stylesheet" href="css/memo.css">
 </head>
 
 <body style="overflow-x:hidden">
-  <header>
-    <img src="img/logo.png" onclick="location.href='index.html'" style="cursor: pointer; width : 100px; height : 50px;">
-    <span onclick="location.href='login.html'" style="cursor: pointer; margin-left: 15%;">로그인</span>
-    <span style="margin-left: 1%; color: #FF6384; cursor: pointer" onclick="location.href='join.html'">회원가입</span>
-  </header>
+    <header>
+        <img src="img/logo.png" onclick="location.href='index.html'" style="cursor: pointer; width : 100px; height : 50px;">
+        <span onclick="location.href='login.html'" style="cursor: pointer; margin-left: 15%;">로그아웃</span>
+        <span style="margin-left: 1%; color: #FF6384; cursor: pointer" onclick="location.href='memo.html'">메모쓰기</span>
+      </header>
   <div class="margin">
-    <div class="title">회원가입</div>
+    <div class="title">메모쓰기</div>
     <hr id="title_hr">
   </div>
   <div class="margin">
@@ -25,22 +25,25 @@
         <form class="login-form" action="" method="post">
           <table width="95%" class="list-table">
             <tr class="content">
-              <td>이름</td>
-              <td><input id="name" type="text" name="userName" size="50" placeholder="김미림" required>
+              <td>제목</td>
+              <td><input id="hakbun" type="text" name="student_id" size="50" required>
+              </td>
+            </tr>
+            <tr> 
+              <td colspan="10">
+                <hr>
               </td>
             </tr>
             <tr class="content">
-              <td>아이디</td>
-              <td><input id="userid" type="text" name="userId" size="50" placeholder="mirim" required>
-              </td>
-            </tr>
-            <tr class="content">
-              <td>비밀번호</td>
-              <td><input id="userpass" type="password" name="userPassword" size="50" required>
+              <td>내용</td>
+              <td colspan="2">
+                <textarea  id="test" name="content" onkeyup="len_chk()"
+                  rows="6" placeholder="내용을 입력해주세요. (100자 이내)" required></textarea>
+                  <div id="test_cnt" style="margin-left: 130px;">(0 / 100)</div>
               </td>
             </tr>
           </table>
-          <input type="submit" class="apply" value="가입하기" onclick="location.href='submitaction.php'" style="cursor: pointer;">
+          <input type="submit" class="apply" value="지원하기" onclick="location.href='submitaction.php'" style="cursor: pointer;">
         </form>
       </div>
       
