--- a/views/html/css/index.css
+++ b/views/html/css/index.css
@@ -48,8 +48,14 @@ a{
 
 .start{
     text-align: center;
+    position: fixed;
+    top: 65%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
     font-family: 'Noto Sans KR', sans-serif;
 }
+
 
 .line{
     position: fixed;
