title 이름 수정 #10

--- a/views/html/index.html
+++ b/views/html/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
-    <title>NooleZip</title>
+    <title>noodle.zip</title>
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
