--- a/views/html/login.html
+++ b/views/html/login.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-  <title>App & Me</title>
+  <title>noodle.zip</title>
 	<link rel="shortcut icon" href="img/favicon.ico">
 <link rel="stylesheet" href="css/login.css">
 </head>
