--- a/views/html/memo.html
+++ b/views/html/memo.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-  <title>App & Me</title>
+  <title>noodle.zip</title>
 	<link rel="shortcut icon" href="img/favicon.ico">
 <link rel="stylesheet" href="css/memo.css">
 </head>
@@ -44,7 +44,7 @@
               </td>
             </tr>
           </table>
-          <input type="submit" class="apply" value="지원하기" onclick="location.href='submitaction.php'" style="cursor: pointer;">
+          <input type="submit" class="apply" value="메모입력" onclick="location.href='submitaction.php'" style="cursor: pointer;">
         </form>
       </div>
       
