링크 연결 수정 #10

--- a/views/html/memo.html
+++ b/views/html/memo.html
@@ -13,7 +13,7 @@
     <header>
         <img src="img/logo.png" onclick="location.href='index.html'" style="cursor: pointer; width : 100px; height : 50px;">
         <span onclick="location.href='login.html'" style="cursor: pointer; margin-left: 15%;">로그아웃</span>
-        <span onclick="location.href='login.html'" style="cursor: pointer; margin-left: 1%;">메모확인</span>
+        <span onclick="location.href='list.html'" style="cursor: pointer; margin-left: 1%;">메모확인</span>
         <span style="margin-left: 1%; color: #FF6384; cursor: pointer" onclick="location.href='memo.html'">메모쓰기</span>
       </header>
   <div class="margin">
