--- a/views/html/list.html
+++ b/views/html/list.html
@@ -14,7 +14,7 @@
   <header>
     <img src="img/logo.png" onclick="location.href='index.html'" style="cursor: pointer; width : 100px; height : 50px;">
     <span onclick="location.href='login.html'" style="cursor: pointer; margin-left: 15%;">로그아웃</span>
-    <span onclick="location.href='login.html'" style="cursor: pointer; margin-left: 1%;">메모쓰기</span>
+    <span onclick="location.href='memo.html'" style="cursor: pointer; margin-left: 1%;">메모쓰기</span>
     <span style="margin-left: 1%; color: #FF6384; cursor: pointer" onclick="location.href='memo.html'">나의메모</span>
   </header>
 
