--- a/views/html/memoedit.html
+++ b/views/html/memoedit.html
@@ -6,18 +6,18 @@
   <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
   <title>noodle.zip</title>
 	<link rel="shortcut icon" href="img/favicon.ico">
-<link rel="stylesheet" href="css/memoedit.css">
+<link rel="stylesheet" href="/memoedit.css">
 </head>
 
 <body style="overflow-x:hidden">
     <header>
-        <img src="img/logo.png" onclick="location.href='index.html'" style="cursor: pointer; width : 100px; height : 50px;">
-        <span onclick="location.href='login.html'" style="cursor: pointer; margin-left: 15%;">로그아웃</span>
-        <span onclick="location.href='list.html'" style="cursor: pointer; margin-left: 1%;">메모확인</span>
-        <span style="margin-left: 1%; color: #FF6384; cursor: pointer" onclick="location.href='memo.html'">메모쓰기</span>
+        <img src="/logo.png" onclick="location.href='/'" style="cursor: pointer; width : 100px; height : 50px;">
+        <span onclick="location.href='login'" style="cursor: pointer; margin-left: 15%;">로그아웃</span>
+        <span onclick="location.href='list'" style="cursor: pointer; margin-left: 1%;">메모확인</span>
+        <span style="margin-left: 1%; color: #FF6384; cursor: pointer" onclick="location.href='memo'">메모쓰기</span>
       </header>
   <div class="margin">
-    <div class="title">메모쓰기</div>
+    <div class="title">메모수정</div>
     <hr id="title_hr">
   </div>
   <div class="margin">
