--- a/views/html/index.html
+++ b/views/html/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>noodle.zip</title>
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="/index.css">
 </head>
 <body>
  
     <div class="circle"></div>
-    <img src="img/logo.png">
+    <img src="/logo.png">
         
     <div class="start">
-        <p style="font-size: 20px;">처음이라면? <a href="join.html">회원가입</a></p>
-        <button onclick="location.href='login.html'">시작하기</button>
+        <p style="font-size: 20px;">처음이라면? <a href="join">회원가입</a></p>
+        <button onclick="location.href='login'">시작하기</button>
     </div>
 
     <div class="line">
