--- a/views/html/list.html
+++ b/views/html/list.html
@@ -6,16 +6,16 @@
   <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
   <title>noodle.zip</title>
 	<link rel="shortcut icon" href="img/favicon.ico">
-<link rel="stylesheet" href="css/login.css">
-<link rel="stylesheet" href="css/list.css">
+<link rel="stylesheet" href="/login.css">
+<link rel="stylesheet" href="/list.css">
 </head>
 
 <body style="overflow-x:hidden">
   <header>
-    <img src="img/logo.png" onclick="location.href='index.html'" style="cursor: pointer; width : 100px; height : 50px;">
-    <span onclick="location.href='login.html'" style="cursor: pointer; margin-left: 15%;">로그아웃</span>
-    <span onclick="location.href='memo.html'" style="cursor: pointer; margin-left: 1%;">메모쓰기</span>
-    <span style="margin-left: 1%; color: #FF6384; cursor: pointer" onclick="location.href='memo.html'">나의메모</span>
+    <img src="/logo.png" onclick="location.href='/'" style="cursor: pointer; width : 100px; height : 50px;">
+    <span onclick="location.href='login'" style="cursor: pointer; margin-left: 15%;">로그아웃</span>
+    <span onclick="location.href='memo'" style="cursor: pointer; margin-left: 1%;">메모쓰기</span>
+    <span style="margin-left: 1%; color: #FF6384; cursor: pointer" onclick="location.href='memo'">나의메모</span>
   </header>
 
 
@@ -38,7 +38,7 @@
             </tr>     
             
             <% data.forEach(function (item, index){ %> 
-                <tr onClick="location.href='join.html/<%=item.memoId %>'">       
+                <tr onClick="location.href='join/<%=item.memoId %>'">       
                 <td><%=item.memoId %></td>
                 <td><%=item.memoTitle  %> </td>
                 <td><%=item.memoContent  %> </td>
