--- a/views/html/join.html
+++ b/views/html/join.html
@@ -22,21 +22,21 @@
   <div class="margin">
     <center>
       <div class="box">
-        <form class="login-form" action="users" method="post">
+        <form class="login-form" action="/users" method="post">
           <table width="95%" class="list-table">
             <tr class="content">
               <td>이름</td>
-              <td><input id="name" type="text" name="userName" size="50" placeholder="김미림" required>
+              <td><input id="name" type="text" name="userName" size="50" placeholder="김미림" required/>
               </td>
             </tr>
             <tr class="content">
               <td>아이디</td>
-              <td><input id="userid" type="text" name="userId" size="50" placeholder="mirim" required>
+              <td><input id="userId" type="text" name="userId" size="50" placeholder="mirim" required/>
               </td>
             </tr>
             <tr class="content">
               <td>비밀번호</td>
-              <td><input id="userpass" type="password" name="userPassword" size="50" required>
+              <td><input id="userPassword" type="password" name="userPassword" size="50" required/>
               </td>
             </tr>
           </table>
