--- a/views/html/login.html
+++ b/views/html/login.html
@@ -35,7 +35,7 @@
               </td>
             </tr>
           </table>
-          <input type="submit" class="apply" value="로그인" onclick="location.href='list'" style="cursor: pointer;">
+          <input type="submit" class="apply" value="로그인" style="cursor: pointer;">
         </form>
       </div>
       
