--- a/views/html/memo.html
+++ b/views/html/memo.html
@@ -44,34 +44,34 @@
               </td>
             </tr>
           </table>
-          <input type="submit" class="apply" value="메모입력" onclick="location.href='submitaction.php'" style="cursor: pointer;">
+          <input type="submit" class="apply" value="메모입력" style="cursor: pointer;">
         </form>
       </div>
       
     </center>
     <script language="javascript">
-      //글자수 제한 체크 
-      function len_chk() {
+           //글자수 제한 체크 
+           function len_chk() {
         var frm = document.apply.reason;
         var frm2 = document.apply.todo;
-        if (frm.value.length > 400) {
-            alert("글자수는 200자로 제한됩니다.");
-            frm.value = frm.value.substring(0, 400);
+        if (frm.value.length > 200) {
+            alert("글자수는 100자로 제한됩니다.");
+            frm.value = frm.value.substring(0, 200);
             frm.focus();
-        } else if (frm2.value.length > 400) {
-            alert("글자수는 200자로 제한됩니다.");
-            frm2.value = frm2.value.substring(0, 400);
+        } else if (frm2.value.length > 200) {
+            alert("글자수는 100자로 제한됩니다.");
+            frm2.value = frm2.value.substring(0, 200);
             frm2.focus();
         }
       }
       //글자수 카운트
       $(document).ready(function() {
         $('#test').on('keyup', function() {
-            $('#test_cnt').html("("+$(this).val().length+" / 200)");
+            $('#test_cnt').html("("+$(this).val().length+" / 100)");
  
-            if($(this).val().length > 200) {
-                $(this).val($(this).val().substring(0, 200));
-                $('#test_cnt').html("(200 / 200)");
+            if($(this).val().length > 100) {
+                $(this).val($(this).val().substring(0, 100));
+                $('#test_cnt').html("(100 / 100)");
             }
         });
     });
