--- a/views/html/index.html
+++ b/views/html/index.html
@@ -11,8 +11,8 @@
     <img src="logo.png">
         
     <div class="start">
-        <p style="font-size: 20px;">처음이라면? <a href="/joins">회원가입</a></p>
-        <button onclick="location.href='logins'">시작하기</button>
+        <p style="font-size: 20px;">처음이라면? <a href="/join">회원가입</a></p>
+        <button onclick="location.href='login'">시작하기</button>
     </div>
 
     <div class="line">
