--- a/views/html/join.html
+++ b/views/html/join.html
@@ -12,8 +12,8 @@
 <body style="overflow-x:hidden">
   <header>
     <img src="/logo.png" onclick="location.href='/'" style="cursor: pointer; width : 100px; height : 50px;">
-    <span onclick="location.href='logins'" style="cursor: pointer; margin-left: 15%;">로그인</span>
-    <span style="margin-left: 1%; color: #FF6384; cursor: pointer" onclick="location.href='join.html'">회원가입</span>
+    <span onclick="location.href='login'" style="cursor: pointer; margin-left: 15%;">로그인</span>
+    <span style="margin-left: 1%; color: #FF6384; cursor: pointer" onclick="location.href='join'">회원가입</span>
   </header>
   <div class="margin">
     <div class="title">회원가입</div>
