--- a/views/html/join.html
+++ b/views/html/join.html
@@ -31,12 +31,12 @@
             </tr>
             <tr class="content">
               <td>아이디</td>
-              <td><input id="userId" type="text" name="userId" size="50" placeholder="mirim" required/>
+              <td><input id="name" type="text" name="userId" size="50" placeholder="mirim" required/>
               </td>
             </tr>
             <tr class="content">
               <td>비밀번호</td>
-              <td><input id="userPassword" type="password" name="userPassword" size="50" required/>
+              <td><input id="name" type="password" name="userPassword" size="50" required/>
               </td>
             </tr>
           </table>
