--- a/views/html/memo.html
+++ b/views/html/memo.html
@@ -13,7 +13,7 @@
     <header>
         <img src="/logo.png" onclick="location.href='/'" style="cursor: pointer; width : 100px; height : 50px;">
         <span onclick="location.href='/login'" style="cursor: pointer; margin-left: 15%;">로그아웃</span>
-        <span onclick="location.href='/list'" style="cursor: pointer; margin-left: 1%;">메모확인</span>
+        <span onclick="location.href='/memos/<%=userId %>'" style="cursor: pointer; margin-left: 1%;">나의메모</span>
         <span style="margin-left: 1%; color: #FF6384; cursor: pointer" onclick="location.href='memo'">메모쓰기</span>
       </header>
   <div class="margin">
