--- a/views/html/notList.html
+++ b/views/html/notList.html
@@ -18,7 +18,7 @@
     <span style="margin-left: 1%; color: #FF6384; cursor: pointer" onclick="location.href='list'">나의메모</span>
   </header>
   <div class="margin">
-    <div class="title">나의 메모  <b style="font-size: 18px"><%=userName %>(<%=userId %>)</b></div>
+    <div class="title">나의 메모  <b style="font-size: 18px">(<%=userId %>)</b></div>
     <hr id="title_hr">
   </div>
 
