--- a/public/css/list.css
+++ b/public/css/list.css
@@ -1,4 +1,5 @@
 table {
+
     border-collapse: collapse;
     width: 100%;
 }
@@ -12,3 +13,7 @@ tr:hover {
   th{
     background-color: rgb(255, 230, 233);
   }
+  td{
+    background-color: white;
+  }
+
