--- a/views/html/list.html
+++ b/views/html/list.html
@@ -15,13 +15,13 @@
     <img src="/logo.png" onclick="location.href='/'" style="cursor: pointer; width : 100px; height : 50px;">
     <span onclick="location.href='/login'" style="cursor: pointer; margin-left: 15%;">로그아웃</span>
     <span onclick="location.href='/memo'" style="cursor: pointer; margin-left: 1%;">메모쓰기</span>
-    <span style="margin-left: 1%; color: #FF6384; cursor: pointer" onclick="location.href='memo'">나의메모</span>
+    <span style="margin-left: 1%; color: #FF6384; cursor: pointer" onclick="location.href=''">나의메모</span>
   </header>
 
 
 
   <div class="margin">
-    <div class="title">나의 메모  <b style="font-size: 18px"><%=userName %>(<%=userId %>)</b></div>
+    <div class="title">나의 메모</div>
     <hr id="title_hr">
   </div>
 
@@ -29,18 +29,28 @@
   <!-- 메모 리스트 테이블 -->
   <div class="margin">
     <center>
-      <div class="box">
         <table>
             <tr>            
                 <th>순번</th>
                 <th>제목</th>
                 <th>내용</th>
             </tr>     
-            
+            <table>
+   
+              <% memos.forEach(function (item, index){ %> 
+                  <tr onClick="location.href='<%=item.memoId %>/<%= item.userId %>'">       
+                  <td><%=item.memoId %></td>
+                  <td><%=item.memoTitle  %> </td>
+                  <td><%=item.memoContent  %> </td>
+               
           
+              </tr>
+              <%  }); %>
+          </table>  
+         
         </table>     
 
-      </div>
+
       
     </center>
 </body>
