--- a/views/html/not-list.html
+++ b/views/html/not-list.html
@@ -13,12 +13,13 @@
 <body style="overflow-x:hidden">
   <header>
     <img src="/logo.png" onclick="location.href='/'" style="cursor: pointer; width : 100px; height : 50px;">
-    <span onclick="location.href='login'" style="cursor: pointer; margin-left: 15%;">로그아웃</span>
-    <span onclick="location.href='memo'" style="cursor: pointer; margin-left: 1%;">메모쓰기</span>
-    <span style="margin-left: 1%; color: #FF6384; cursor: pointer" onclick="location.href='list'">나의메모</span>
+    <span onclick="location.href='/login'" style="cursor: pointer; margin-left: 15%;">로그아웃</span>
+    <span onclick="location.href='/memo'" style="cursor: pointer; margin-left: 1%;">메모쓰기</span>
+    <span style="margin-left: 1%; color: #FF6384; cursor: pointer" onclick="location.href=''">나의메모</span>
   </header>
+
   <div class="margin">
-    <div class="title">나의 메모  <b style="font-size: 18px">(<%=userId %>)</b></div>
+    <div class="title">나의 메모 </div>
     <hr id="title_hr">
   </div>
 
@@ -28,7 +29,7 @@
     <center>
       <div class="box" style="padding-top :120px;">
         <p style="font-size: 30px;">메모가 존재하지 않습니다.</p>
-        <p onclick="location.href='memo'" style="color: #FF6384; cursor: pointer; font-size: 20px;"><b>메모쓰기</b></p>
+        <p onclick="location.href='/memo'" style="color: #FF6384; cursor: pointer; font-size: 20px;"><b>메모쓰기</b></p>
       </div>
       
     </center>
